# untether

./: AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  device-profile.yml  methodology.yml
.github/workflows/: publish.yml
assets/: ASSETS-README.md  BRANDING.md  DESIGN-BRIEF.md  untether-banner.txt
components/untether_spp/: README.md  __init__.py  example-plug-wyze-office.yaml  untether_spp.cpp  untether_spp.h
docs/: CLASSIC-BT-RE-HANDBOOK.md  HA-MCP.md  SECRETS.md  TECHNIQUES.md  WORKFLOWS.md
examples/: 01-static-decompile-to-command.md  02-gatt-enumeration.md  03-status-frame-decode.md  04-ha-integration-wiring.md  05-reliability-watchdog.md  README.md  _TEMPLATE.md
examples/devices/: README.md  atorch-j7c-usb-meter.md  divoom-pixoo-16.md  divoom-timebox-mini.md  govee-h5075-h5104.md  rongtai-infinity-evolution-chair.md  switchbot-w3400010-outdoor-meter.md
python/: LICENSE  README.md  pyproject.toml
python/src/untether_bt/: __init__.py  _assigned_numbers.py  advertising.py  android.py  apk.py  bluez.py  btsnoop.py  capture.py  connection.py  framing.py  frida.py  gatt.py  hci.py  numbers.py  rfcomm.py  sdp.py  spp.py  uiauto.py
python/src/untether_bt/frida_hooks/: android_bt.js
python/tests/: test_advertising.py  test_android.py  test_apk.py  test_bluez.py  test_btsnoop.py  test_capture.py  test_connection.py  test_framing.py  test_frida.py  test_gatt.py  test_numbers.py  test_rfcomm.py  test_sdp.py  test_spp.py
python/tools/: gen_assigned_numbers.py
(+31 files in other folders)
